tests/fixtures/invalid/pow_bytes_bytes_dict.py
# Cannot call pow() with Bytes, Bytes, Dict[str, int]
x = pow(b"hello", b"hello", {"a": 1})
